--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -377,7 +377,15 @@
                   url: "{% url 'delete_asset' group_id %}",
                   datatype: "html",
                   success: function(data) {
-                        location.href = "{% url 'asset_list' group_id  %}";
+                        if("{{title}}" = "asset_detail"){
+
+                            location.href = "{% url 'course_gallery' group_id  %}";
+                        }
+                        else{
+                            
+                            location.href = "{% url 'course_raw_material' group_id  %}";
+                        }
+                        
                 }
             });
         }
