WIP Interactives Page

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -163,12 +163,7 @@
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
                 </li>
-                <li class="has-dropdown not-click">
-                    <a href="#">Interactives</a>
-                    <ul class="dropdown">
-                        <li><a href="#">Games</a></li>
-                        <li><a href="http://doer.metastudio.org/welcome">DOER</a></li>
-                    </ul>
+                <li><a href="#">Interactives</a>
                 </li>
                 
             </ul>
