Grid-2 thumbnail for asset card added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1068,15 +1068,18 @@ ul.horizontal_tabs_gstudio {
         .photos img {
           /* Just in case there are inline attributes */
           width: 100% !important;
-          height: auto !important;
+          height: 100px !important;
         }
+
         @media (max-width: 1200px) {
               .photos {
               -moz-column-count:    2;
               -webkit-column-count: 2;
               column-count:         2;
               }
+
             }
+
             @media (max-width: 1000px) {
               .photos {
               -moz-column-count:    2;
@@ -1098,6 +1101,73 @@ ul.horizontal_tabs_gstudio {
               column-count:         1;
               }
             }
+
+
+            .photos-02{
+                 /* no vertical space*/
+                 line-height: 0;
+                 -webkit-column-count: 1;
+                 -moz-column-count:    1;
+                 -webkit-column-gap:   0px;
+                 -moz-column-gap:      0px;
+                 column-count:         1;
+                 column-gap:           1px;
+                 -moz-row-count: 2;
+                 row-count: 2;
+                 -webkit-row-gap:   0px;
+                 -moz-row-gap:      0px;
+
+               }
+
+               .photos-02 img {
+               /* Just in case there are inline attributes */
+                   width: 100% !important; 
+                   height: 105px !important;
+               }
+
+               @media (max-width: 1200px) {
+                   .photos-02 {
+                   -moz-row-count:    2;
+                   -webkit-column-count: 1;
+                   column-count:         1;
+                   row-count: 2;
+                   -webkit-row-gap:   0px;
+                   -moz-row-gap:      0px;
+                   }
+               }
+
+               @media (max-width: 1000px) {
+                   .photos-02 {
+                   -moz-row-count:    2;
+                   -webkit-column-count: 1;
+                   column-count:         1;
+                   row-count: 2;
+                   -webkit-row-gap:   0px;
+                   -moz-row-gap:      0px;
+                   }
+               }
+
+               @media (max-width: 800px) {
+                 .photos-02 {
+                   -moz-row-count:    2;
+                   -webkit-column-count: 0;
+                   column-count:         1;
+                   row-count: 3;
+                   -webkit-row-gap:   0px;
+                   -moz-row-gap:      0px;
+                 }
+               }
+
+               @media (max-width: 400px) {
+                 .photos-02 {
+                   -moz-row-count:    2;
+                   -webkit-column-count: 1;
+                   column-count:         1;
+                   row-count: 2;
+                   -webkit-row-gap:   0px;
+                   -moz-row-gap:      0px;
+                     }
+                 }
 
 
               .photos-03{
