hide controls-box in quiz-player if error

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -344,6 +344,7 @@
                     location.reload()
                 }
                 else{
+                    $('.controls-box').addClass('hide')
                     $(".loading_lbl").text("Something went wrong. Click on ")
                     $(".loading_lbl").append('<a href="#" onclick="window.location.reload(true);">Regresh Page</a>')
                     lesson_finish_confirm_flag = false;
