--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -163,8 +163,8 @@
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
                 </li>
-                <li><a href="#">Interactives</a>
-                </li>
+                <!--<li><a href="#">Interactives</a>
+                </li>-->
                 
             </ul>
           </section>
