left alignment for settings list in CMS and LMS

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5887,3 +5887,8 @@ p {
 .attempts_count {
   color: #000000 !important;
 }
+
+/* line 5984, ../../../scss/_clix2017.scss */
+#course-settings-drop li a {
+  text-align: left;
+}
