left alignment css added for settings menu

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5978,3 +5978,12 @@ ul.nav_menu_1 {
 .attempts_count{
     color: #000000 !important;
 }
+
+#course-settings-drop{
+    li{
+            a{
+
+                text-align: left;
+            }
+    }
+}
