alignment of setting menu for asset detail

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5892,3 +5892,8 @@ p {
 #course-settings-drop li a {
   text-align: left;
 }
+
+/* line 5992, ../../../scss/_clix2017.scss */
+#asset-settings-drop li a {
+  text-align: left;
+}
