--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5987,3 +5987,11 @@ ul.nav_menu_1 {
             }
     }
 }
+#asset-settings-drop{
+    li{
+            a{
+
+                text-align: left;
+            }
+    }
+}
