quiz-player to have purple action btns

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -72,7 +72,7 @@
               <div class="lesson-title" title="{{trans_lesson_name}}">
                   <b>{{trans_lesson_name}}</b>
                   {% if allow_finish_lesson %}
-                    <a href="#" class="finish-lesson right">Finish</a>
+                    <a href="#" class="purple-btn finish-lesson right">Finish</a>
                   {% endif %}
               </div>
               <div class="activity-title">
