--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5700,89 +5700,78 @@ p {
 }
 
 /* line 5849, ../../../scss/_clix2017.scss */
-.finish-lesson {
-  border-radius: 5px;
-  text-transform: uppercase;
-  color: #ffffff !important;
-  width: inherit;
-  font-family: "OpenSans-Semibold", sans-serif;
-  border: 2px solid #6a0054;
-  background-color: #6a0054;
-}
-
-/* line 5859, ../../../scss/_clix2017.scss */
 .auto_width {
   width: auto !important;
 }
 
 /* responsive footer */
-/* line 5864, ../../../scss/_clix2017.scss */
+/* line 5854, ../../../scss/_clix2017.scss */
 .clearfix {
   clear: both;
 }
 
-/* line 5865, ../../../scss/_clix2017.scss */
+/* line 5855, ../../../scss/_clix2017.scss */
 .center {
   text-align: center;
 }
 
-/* line 5866, ../../../scss/_clix2017.scss */
+/* line 5856, ../../../scss/_clix2017.scss */
 .left {
   text-align: left;
 }
 
-/* line 5867, ../../../scss/_clix2017.scss */
+/* line 5857, ../../../scss/_clix2017.scss */
 .right {
   text-align: right;
 }
 
-/* line 5869, ../../../scss/_clix2017.scss */
+/* line 5859, ../../../scss/_clix2017.scss */
 .clr1 {
   background: #FFFFFF;
   color: #333743;
 }
 
-/* line 5870, ../../../scss/_clix2017.scss */
+/* line 5860, ../../../scss/_clix2017.scss */
 .clr2 {
   background: #F1F3F5;
   color: #8F94A3;
 }
 
-/* line 5871, ../../../scss/_clix2017.scss */
+/* line 5861, ../../../scss/_clix2017.scss */
 .clr3 {
   background: rgba(221, 221, 221, 0.18);
   color: #BDC3CF;
 }
 
-/* line 5872, ../../../scss/_clix2017.scss */
+/* line 5862, ../../../scss/_clix2017.scss */
 .clr4 {
   background: rgba(221, 221, 221, 0.18);
   color: #E3E7F2;
 }
 
-/* line 5873, ../../../scss/_clix2017.scss */
+/* line 5863, ../../../scss/_clix2017.scss */
 .clr5 {
   color: #F1F3F5;
 }
 
-/* line 5874, ../../../scss/_clix2017.scss */
+/* line 5864, ../../../scss/_clix2017.scss */
 .clr6 {
   color: #39B5A1;
 }
 
-/* line 5875, ../../../scss/_clix2017.scss */
+/* line 5865, ../../../scss/_clix2017.scss */
 .clr7 {
   color: #D45245;
 }
 
 /*##### Footer Structure #####*/
-/* line 5880, ../../../scss/_clix2017.scss */
+/* line 5870, ../../../scss/_clix2017.scss */
 .bo-wrap {
   clear: both;
   width: auto;
 }
 
-/* line 5881, ../../../scss/_clix2017.scss */
+/* line 5871, ../../../scss/_clix2017.scss */
 .bo-footer {
   clear: both;
   width: auto;
@@ -5791,14 +5780,14 @@ p {
   margin: 0 auto;
 }
 
-/* line 5889, ../../../scss/_clix2017.scss */
+/* line 5879, ../../../scss/_clix2017.scss */
 .bo-footer-social {
   text-align: left;
   line-height: 1px;
   padding: 10px 10px 10px 10px;
 }
 
-/* line 5896, ../../../scss/_clix2017.scss */
+/* line 5886, ../../../scss/_clix2017.scss */
 .bo-footer-smap {
   width: 600px;
   float: left;
@@ -5807,7 +5796,7 @@ p {
   font-size: 18px;
 }
 
-/* line 5904, ../../../scss/_clix2017.scss */
+/* line 5894, ../../../scss/_clix2017.scss */
 .bo-footer-uonline {
   width: 300px;
   /* Account for margins + border values */
@@ -5816,7 +5805,7 @@ p {
   text-align: center;
 }
 
-/* line 5911, ../../../scss/_clix2017.scss */
+/* line 5901, ../../../scss/_clix2017.scss */
 .bo-footer-power {
   width: 300px;
   padding: 5px 10px;
@@ -5830,19 +5819,19 @@ p {
 /*##### Footer Responsive #####*/
 /* for 980px or less */
 @media screen and (max-width: 980px) {
-  /* line 5926, ../../../scss/_clix2017.scss */
+  /* line 5916, ../../../scss/_clix2017.scss */
   .bo-footer {
     width: 95%;
     padding: 1% 2%;
   }
 
-  /* line 5930, ../../../scss/_clix2017.scss */
+  /* line 5920, ../../../scss/_clix2017.scss */
   .bo-footer-smap {
     width: 33%;
     padding: 1% 2%;
   }
 
-  /* line 5934, ../../../scss/_clix2017.scss */
+  /* line 5924, ../../../scss/_clix2017.scss */
   .bo-footer-uonline {
     width: 46%;
     padding: 1% 2%;
@@ -5850,7 +5839,7 @@ p {
     text-align: right;
   }
 
-  /* line 5941, ../../../scss/_clix2017.scss */
+  /* line 5931, ../../../scss/_clix2017.scss */
   .bo-footer-power {
     clear: both;
     padding: 1% 2%;
@@ -5861,21 +5850,21 @@ p {
 }
 /* for 700px or less */
 @media screen and (max-width: 600px) {
-  /* line 5952, ../../../scss/_clix2017.scss */
+  /* line 5942, ../../../scss/_clix2017.scss */
   .bo-footer-smap {
     width: auto;
     float: none;
     text-align: center;
   }
 
-  /* line 5958, ../../../scss/_clix2017.scss */
+  /* line 5948, ../../../scss/_clix2017.scss */
   .bo-footer-uonline {
     width: auto;
     float: none;
     text-align: center;
   }
 
-  /* line 5964, ../../../scss/_clix2017.scss */
+  /* line 5954, ../../../scss/_clix2017.scss */
   .bo-footer-power {
     width: auto;
     float: none;
@@ -5883,12 +5872,12 @@ p {
   }
 }
 /* for 480px or less */
-/* line 5977, ../../../scss/_clix2017.scss */
+/* line 5967, ../../../scss/_clix2017.scss */
 .explore-settings-drop {
   margin-left: 57%;
   display: inline-block;
 }
-/* line 5980, ../../../scss/_clix2017.scss */
+/* line 5970, ../../../scss/_clix2017.scss */
 .explore-settings-drop > button {
   color: #164a7b;
   font-weight: 400;
@@ -5900,18 +5889,29 @@ p {
   border-radius: 5px !important;
   display: inline-block;
 }
-/* line 5990, ../../../scss/_clix2017.scss */
+/* line 5980, ../../../scss/_clix2017.scss */
 .explore-settings-drop > button:hover {
   border-radius: 10px;
   background-color: #ddeff9;
   color: #164a7b;
 }
-/* line 5996, ../../../scss/_clix2017.scss */
+/* line 5986, ../../../scss/_clix2017.scss */
 .explore-settings-drop a {
   font-size: 16px;
 }
 
-/* line 6001, ../../../scss/_clix2017.scss */
+/* line 5991, ../../../scss/_clix2017.scss */
 .attempts_count {
   color: #000000 !important;
+}
+
+/* line 5995, ../../../scss/_clix2017.scss */
+.purple-btn {
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: #ffffff !important;
+  width: inherit;
+  font-family: "OpenSans-Semibold", sans-serif;
+  border: 2px solid #6a0054;
+  background-color: #6a0054;
 }
