--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5846,16 +5846,6 @@ ul.nav_menu_1 {
   height: 2rem;
   }
 
-.finish-lesson{
-    border-radius: 5px;
-    text-transform: uppercase;
-    color: #ffffff !important;
-    width: inherit;
-    font-family: "OpenSans-Semibold", sans-serif;
-    border: 2px solid #6a0054;
-    background-color: #6a0054;    
-}
-
 .auto_width{
     width: auto !important;
 }
@@ -6000,4 +5990,14 @@ ul.nav_menu_1 {
 
 .attempts_count{
     color: #000000 !important;
+}
+
+.purple-btn{
+    border-radius: 5px;
+    text-transform: uppercase;
+    color: #ffffff !important;
+    width: inherit;
+    font-family: "OpenSans-Semibold", sans-serif;
+    border: 2px solid #6a0054;
+    background-color: #6a0054;
 }
