--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
@@ -4,104 +4,53 @@
 {% block body_content %}
 
 <style type="text/css">
-.tool-outer-div{
+.polaroid {
+  width: 30%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px 10px 10px 10px;
+  cursor: pointer;
+  	&:hover{
+  		
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  	}
 
-    position: relative !important;
-    width: 100% !important;
-    background-color: #F0F1F2 !important;
 }
-	.tool-inner-div{
-		padding-left: 20px !important;
-	    padding-right: 20px !important;
-	    padding-top: 24px !important;
-	    padding-bottom: 24px !important;
-	    display: -moz-box !important;
-	    display: -ms-flexbox !important;
-	    display: -webkit-box !important;
-	    display: -webkit-flex !important;
-	    display: flex !important;
-	    flex-direction: row !important;
-	    justify-content: center !important;
-	    margin: auto !important;
-	    max-width: 1200px !important;
-	    -webkit-flex-direction: row !important;
-	    -ms-flex-direction: row !important;
-	    -webkit-justify-content: center !important;
-	    -webkit-box-orient: horizontal !important;
-	    -webkit-box-direction: normal !important;
-	    -ms-flex-pack: center !important;
-	    -webkit-box-pack: center !important;
-	}
 
-	    .tool-list{
-	    	min-height: 300px !important;
-	    	max-width: 268px !important;
-		    flex: 1 1 0 !important;
-		    -webkit-flex: 1 1 0 !important;
-		    display: -moz-box !important;
-		    display: -ms-flexbox !important;
-		    display: -webkit-box !important;
-		    display: -webkit-flex !important;
-		    display: flex !important;
-		    flex-direction: row !important;
-		    flex-grow: 1 !important;
-		    border-style: solid !important;
-		    border-width: 1px !important;
-		    border-radius: 4px !important;
-		    border-color: #D6D8DA !important;
-		    text-decoration: none !important;
-		    background-color: #FFFFFF !important;
-		    color: inherit !important;
-		    padding: 24px 20px !important;
-		    max-height: 146px !important;
-		    -webkit-flex-direction: row !important;
-		    -ms-flex-direction: row !important;
-		    -webkit-flex-grow: 1 !important;
-		    -webkit-box-orient: horizontal !important;
-		    -webkit-box-direction: normal !important;
-	    }
+.container {
+  text-align: center;
+  padding: 10px 20px;
+}
 
-	    .tool-icon{
-	    	flex-shrink: 0 !important;
-		    flex-grow: 0 !important;
-		    width: 100% !important;
-		    height: 200px !important;
-		    -webkit-flex-shrink: 0 !important;
-		    -webkit-flex-grow: 0 !important;
 
-	    }
 </style>
 
+
 <div class="row">
-	<div class="small-12 large-10 columns">
 
-		<div class="tool-outer-div">
-			<div class="tool-inner-div">
-				<div class="tool-list">
-					<div class="tool-icon">
-						<img src="/static/ndf/images/PoliceQuad_pt33x.png"/>
-					</div>
-				</div>
 
-			</div>
-		</div>
-		<div class="tool-outer-div">
-			<div class="tool-inner-div">
-				<div class="tool-list">
-				</div>
 
-			</div>
-		</div>
-		<div class="tool-outer-div">
-			<div class="tool-inner-div">
-				<div class="tool-list">
-				</div>
+	<div class="polaroid">
+	  <img src="/static/ndf/images/Motions_of_Moon.jpg" alt="Norway" style="width:100%">
+	  <div class="container">
+	    <p>The Troll's tongue in Hardanger, Norway</p>
+	  </div>
+	</div>
 
-			</div>
-		</div>
+	<div class="polaroid">
+	  <img src="/static/ndf/images/Motions_of_Moon.jpg" alt="Norway" style="width:100%">
+	  <div class="container">
+	    <p>Northern Lights in Norway</p>
+	  </div>
 	</div>
 
 </div>
+
+
+</body>
+</html>
 
 
 {% endblock body_content %}
