--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
@@ -11,17 +11,21 @@
   margin-bottom: 25px;
   margin-top: 25px;
   padding: 10px 10px 10px 10px;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   cursor: pointer;
-  	&:hover{
-  		
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-  	}
-
 }
 
+.polaroid:hover img {
+	  -moz-transform: scale(1.1);
+	  -webkit-transform: scale(1.1);
+	  transform: scale(1.1);
+}
 .container {
   text-align: center;
   padding: 10px 20px;
+
 }
 
 
