--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -6075,11 +6075,22 @@ p {
 
 /* line 6112, ../../../scss/_clix2017.scss */
 .purple-btn {
-  border-radius: 5px;
-  text-transform: uppercase;
-  color: #ffffff !important;
   width: inherit;
+  text-transform: uppercase;
+  border-radius: 5px;
   font-family: "OpenSans-Semibold", sans-serif;
-  border: 2px solid #6a0054;
   background-color: #6a0054;
+  color: #ffffff !important;
+  border: 2px solid #6a0054;
+}
+
+/* line 6122, ../../../scss/_clix2017.scss */
+.disable-purple-btn {
+  width: inherit;
+  text-transform: uppercase !important;
+  border-radius: 5px;
+  font-family: "OpenSans-Semibold", sans-serif;
+  background: #4b4852;
+  color: #ffffff !important;
+  border: 2px solid #4b4852;
 }
